--- a/apps/web/app/styles/globals.css
+++ b/apps/web/app/styles/globals.css
@@ -144,3 +144,17 @@ body {
   overflow-y: auto;
   scroll-behavior: smooth;
 }
+
+
+/* Add to your global CSS */
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera */
+}
